# stellar-federation-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: federation_test.rs
