[package]
name = "stellar-federation"
version = "0.2.0"
authors = ["Francesco Ceccon <francesco@ceccon.me>"]
edition = "2018"
description = "Library to retrieve information about a Stellar address."
license = "Apache-2.0"
documentation = "https://docs.rs/stellar-federation"
repository = "https://github.com/aurora-rs/stellar-federation-rs"
readme = "README.md"
keywords = ["stellar", "blockchain"]

[dependencies]
base64 = "0.12.3"
hyper = { version = "0.14.2", features = ["client", "http1", "stream"] }
hyper-tls = "0.5.0"
url = "2.1.1"
http = "0.2.3"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
stellar-base = "0.5.0"
stellar-toml = "0.3.0"
thiserror = "1.0.20"

[dev-dependencies]
tokio = { version = "1.0.2", features = ["full"] }
